[gd_scene load_steps=3 format=3 uid="uid://bqkf2oo4ok47n"]

[ext_resource type="Theme" uid="uid://d28ig3cmjbwey" path="res://new_theme.tres" id="1_u1bt7"]
[ext_resource type="Script" path="res://main_menu.gd" id="2_3op4h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u1bt7")
script = ExtResource("2_3op4h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="HelpButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "How to Play"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TabContainer" type="TabContainer" parent="Menu"]
layout_mode = 2
current_tab = 0

[node name="Help" type="MarginContainer" parent="Menu/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 0

[node name="Label" type="Label" parent="Menu/TabContainer/Help"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 1
text = "- Hold space to hide behind cover
- Left click to shoot when not behind cover
- You have 6 shots in your revolver
- You automatically reload when hiding behind cover
- Shooting boxes above enemies will drop it on their heads, killing them and granting bonus noteriety
- Avoid killing civilians, since that lowers your noteriety"
autowrap_mode = 3

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
